Set -moz-user-select to "text" as a partial stopgap measure for issue #1

--- a/browser/visits.scss
+++ b/browser/visits.scss
@@ -8,7 +8,7 @@ body {
 
   .trap-url {
     -webkit-user-select: all;
-    -moz-user-select: all;
+    -moz-user-select: text;
     -ms-user-select: all;
     user-select: all;
 
